--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "ajv": "^8.11.0",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.4",
     "express": "^4.17.3",
@@ -21,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "style-loader": "^3.3.1",
+    "validator": "^13.7.0",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   },
